--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,10 +20,10 @@
 		  <li class="nav-item dropdown">
 		    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Products</a>
 		    <ul class="dropdown-menu">
-		      <li><a class="dropdown-item" href="{{ url_for('main.products') }}">Vitamins</a></li>
-		      <li><a class="dropdown-item" href="#">Creatines</a></li>
-		      <li><a class="dropdown-item" href="#">Anabolics</a></li>
-		      <li><a class="dropdown-item" href="#">Amino acids</a></li>
+		      <li><a class="dropdown-item" href="{{ url_for('main.products', product_type='vitamin') }}">Vitamins</a></li>
+		      <li><a class="dropdown-item" href="{{ url_for('main.products', product_type='joint') }}">Joint</a></li>
+		      <li><a class="dropdown-item" href="{{ url_for('main.products', product_type='anabolic') }}">Anabolics</a></li>
+		      <li><a class="dropdown-item" href="{{ url_for('main.products', product_type='creatine') }}">Creatines</a></li>
 		      <li><hr class="dropdown-divider"></li>
 		      <li><a class="dropdown-item" href="#">Separated link</a></li>
 		    </ul>
@@ -33,6 +33,9 @@
 		  </li>
 		  <li class="nav-item">
 		    <a class="nav-link" href="{{ url_for('main.about') }}">About</a>
+		  </li>
+		  <li id="log" class="nav-item">
+		    <a class="nav-link" href="{{ url_for('blog.post') }}">Blog</a>
 		  </li>
 		  {% if not current_user.is_authenticated %}
 		  <li id="reg" class="nav-item">
@@ -54,8 +57,6 @@
 		
 
 	{% endblock %}
-
-	{% include "footer.html" %}
 
 </body>
 </html>
